<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_new_book"
        android:title="@string/add_new_book"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/my_books_button"
        android:title="@string/my_books_button"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/my_friends_books_button"
        android:title="@string/my_friends_books_button"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/logout_button"
        android:title="@string/logout_button"
        app:showAsAction="never"></item>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</menu>