<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/app_name"
        android:textColor="@color/com_facebook_blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/userPhotoView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:contentDescription="@string/user_photo"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="8dp"
        android:text="@string/default_username"
        android:textColor="@color/com_facebook_blue" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/delete_data_btn"
        style="@style/com_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/delete_all_my_books" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="8dp"
        android:labelFor="@+id/messageEditText"
        android:text="@string/change_your_book_request_message"
        android:textColor="@color/com_facebook_blue" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:ems="10"
        android:hint="@string/message_template"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/delete_data_btn"
        style="@style/com_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/save" />
</LinearLayout>